2008-06-03  Andreas Kupries  <andreask@activestate.com>

	* exp_glob.c (Exp_StringCaseMatch2): Fixed bug in the handling of
	  glob classes, see [SF Bug 1873404]. The code tried to match the
	  closing bracket of a class in the input because it was not
	  properly skipped after the class was matched successfully.
	  Additional trace output added.
	* configure.in: Bumped version to 5.44.1.9.
	* configure: Regen'd, autoconf 2.59.

2008-05-05  Andreas Kupries  <andreask@activestate.com>

	* exp_pty.c: Minimal ansification of function definitions to match
	  them to their prototypes where promoted types are otherwise
	  causing a mismatch for some compilers, like AIX in 64bit mode.
	* configure.in: Bumped version to 5.44.1.8.
	* configure: Regen'd, autoconf 2.59.

2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* configure.in: Bumped version to 5.44.1.7.
	* configure: Regen'd, autoconf 2.59.

	* The following set of changes was sent our way by Reinhard Max
	  <max@tclers.tk>.

	* exp_command.c: Fixed more compiler warnings, and started
	* exp_command.h: to ansify the code base, beginning with
	* exp_inter.c: the introduction of proper function prototypes.
	* exp_main_exp.c:
	* exp_pty.h:
	* exp_tty.c:
	* exp_tty.h:
	* exp_win.c:
	* expect.c:
	* pty_termios.c:
	* retoglob.c:

2008-04-03  Andreas Kupries   <andreask@activestate.com>

	* configure.in: Bumped version to 5.44.1.6.
	* configure: Regen'd, autoconf 2.59.

	* The following set of changes was sent our way by Reinhard Max
	  <max@tclers.tk>.

	* configure.in: Fixed checking of stty on linux, do not restrict
	  to specific cpu's. Further try with stdin, and stdin redirected
	  to /dev/tty when determining if stdout is read.

	* testsuite/configure.in: Brought up to TEA 3.5.
	* testsuite/aclocal.m4: New file, to import the TEA definitions.

	* Dbg.c: Added missed CONST in declaration and definition of
	  'debugger_trap'.

	* exp_command.c: Fixed pointer aliasing trouble with